--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.application.name=spring20240405
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 # server session timeout
-server.servlet.session.timeout=5s
+server.servlet.session.timeout=30m
+# database connection
+spring.datasource.url=jdbc:mariadb://localhost:3306/w3schools
+spring.datasource.username=root
+spring.datasource.password=1234
